// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute should return success for token 1`] = `
Object {
  "data": Object {
    "result": 137.87276643,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 137.87276643,
  "statusCode": 200,
}
`;

exports[`execute should return success for trust 1`] = `
Object {
  "data": Object {
    "result": 140,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 140,
  "statusCode": 200,
}
`;

exports[`execute should return success when given a chain 1`] = `
Object {
  "data": Object {
    "result": 21,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 21,
  "statusCode": 200,
}
`;

exports[`execute should return success when given a chain and resultPath 1`] = `
Object {
  "data": Object {
    "result": 20.72,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 20.72,
  "statusCode": 200,
}
`;
